--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* * {
+    border: 1px solid red;
+} */
+
 body {
     margin: 0px;
     display: flex;
@@ -7,13 +11,22 @@ body {
 .header {
     background-color: #272838;
     display: flex;
+    justify-content: center;
+    padding: 12px 0;
+}
+
+.header-wrapper {
+    flex: auto;
+    max-width: 1200px;
+    display: flex;
     justify-content: space-between;
-    padding: 12px 256px;
+    align-items: center;
 }
 
 .navigation {
     display: flex;
     list-style: none;
+    padding: 0px;
     color: white;
 }
 
