--- a/style.css
+++ b/style.css
@@ -9,6 +9,15 @@ body {
     color: #F9F8F8;;
 }
 
+h1 {
+    margin: 0px;
+    font-size: 48px;
+}
+
+p {
+    font-size: 18px;
+}
+
 a {
     text-decoration: none;
     color: #F9F8F8;
@@ -51,11 +60,32 @@ a {
     max-width: 1200px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    margin: 64px 0;
+    align-items: stretch;
+    margin: 128px 0;
+    gap: 64px;
+    flex-wrap: wrap;
+}
+
+.hero-text {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
 .hero-image {
-    width: 520px;
+    flex: 1;
+    width: 360px;
     height: auto;
+    border-radius: 12px;
+}
+
+.hero-button {
+    background-color: #F9F8F8;
+    border: none;
+    padding: 12px 32px;
+    border-radius: 6px;
+    font-weight: bold;
+    font-size: 16px;
 }
