Clean up infoblock section

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
     margin: 0px;
     display: flex;
     flex-direction: column;
-    color: #F9F8F8;;
 }
 
 h1 {
@@ -16,6 +15,7 @@ h1 {
 
 p {
     font-size: 18px;
+    margin: 0px;
 }
 
 a {
@@ -72,6 +72,7 @@ a {
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
+    color: #F9F8F8;
 }
 
 .hero-image {
@@ -91,7 +92,8 @@ a {
 }
 
 .info-header {
-    color: #272838;
+    margin: 48px;
+    font-size: 32px;
 }
 
 .info {
@@ -102,17 +104,22 @@ a {
 
 .info-block {
     display: flex;
+    width: 800px;
+    gap: 12px;
+    margin-bottom: 32px;
 }
 
 .info-block > div {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
+    gap: 16px;
 }
 
 .illustration {
     border: 2px solid #F3DE8A;
     border-radius: 18px;
-    width: 180px;
-    height: 180px;
+    width: 160px;
+    height: 160px;
 }
