Add footer styling

--- a/style.css
+++ b/style.css
@@ -188,3 +188,17 @@ a {
     font-weight: bold;
     font-size: 21px;
 }
+
+/* Footer section */
+
+.footer-block {
+    background-color: #272838;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 32px 0;
+}
+
+.footer-block > * {
+    color: #F9F8F8;
+}
