--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ a {
     flex: auto;
     max-width: 1200px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: stretch;
     margin: 128px 0;
     gap: 64px;
@@ -75,9 +75,10 @@ a {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-start;
     color: #F9F8F8;
+    gap: 36px;
 }
 
 .hero-img-wrapper {
